// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NeedsReviewInstancesSection renders null cards property 1`] = `<DocumentFragment />`;

exports[`NeedsReviewInstancesSection renders null results 1`] = `<DocumentFragment />`;

exports[`NeedsReviewInstancesSection renders with alerting off 1`] = `
<DocumentFragment>
  <mock-resultsection
    badgecount="0"
    deps="[object Object]"
    outcometype="review"
    results=""
    sectionheadinglevel="2"
    shouldalertfailurescount="false"
    targetappinfo="[object Object]"
    title="Instances to review"
  />
</DocumentFragment>
`;

exports[`NeedsReviewInstancesSection renders with alerting on 1`] = `
<DocumentFragment>
  <mock-resultsection
    badgecount="0"
    deps="[object Object]"
    outcometype="review"
    results=""
    sectionheadinglevel="2"
    shouldalertfailurescount="true"
    targetappinfo="[object Object]"
    title="Instances to review"
  />
</DocumentFragment>
`;

exports[`NeedsReviewInstancesSection renders with unknowns 1`] = `
<DocumentFragment>
  <mock-resultsection
    badgecount="2"
    deps="[object Object]"
    outcometype="review"
    results="[object Object],[object Object]"
    sectionheadinglevel="2"
    targetappinfo="[object Object]"
    title="Instances to review"
  />
</DocumentFragment>
`;
